lintian (2.5.46) UNRELEASED; urgency=medium

   XXX: generate tag summary with private/generate-tag-summary

  * commands/reporting-html-reports.pm:
    + [NT] Fix typo in named parameter that made the raw lintain.log
      unavailable on lintian.debian.org.  Thanks to Guillem Jover
      for reporting the issue.  (Closes: #828719)
    + [NT] Install the lintian log file as a resource so it can be
      handled (e.g. cached) like other resources.

  * data/scripts/interpreters:
    + [JW] Apply patch from Sergio Durigan Junior to add newLISP as a
      known interpreter.  (Closes: #828934)
  * data/spelling/corrections:
    + [JW] Add more corrections.

 -- Niels Thykier <niels@thykier.net>  Sun, 19 Jun 2016 20:17:52 +0000

lintian (2.5.45) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - build-depends-arch-without-arch-dependent-binary
      - debhelper-autoscript-in-maintainer-scripts
      - no-strong-digests-in-dsc
      - testsuite-dependency-has-unparsable-elements
    + Removed:
      - build-depends-arch-without-arch-dependant-binary
      - init.d-script-missing-lsb-description

  * checks/application-not-library.{desc,pm}:
    + [JW] Use HTTPS for Alioth URLs.
    + [AB] Don't emit application-in-library-section for packages starting
      with "cpan", not only "cpanplus" and "cpanminus".
  * checks/binaries.{desc,pm}:
    + [NT] Rewrite description for hardening-no-bindnow.  There
      is no references to why bindnow would cause issues.
    + [AB] Relax regexp for missing-dependency-on-perlapi to allow letters
      inside the API name. Thanks Niko Tyni! (Closes: #823437)
  * checks/debhelper.pm:
    + [NT] The /usr/share/R/debian/r-cran.mk file implies
      /usr/share/cdbs/1/rules/debhelper.mk.
  * checks/fields.{desc,pm}:
    + [JW] Fix typos.
    + [AB] Add new check for weak checksums in source packages:
      new tag no-strong-digests-in-dsc (Closes: #824916)
  * checks/files.desc: